--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/react": "^18.0.20",
+    "@types/react-dom": "^18.0.6",
+    "typescript": "^4.8.3",
     "webpack": "^5.74.0"
   },
   "scripts": {
